--- a/Forever/Properties/Resources.resx
+++ b/Forever/Properties/Resources.resx
@@ -133,4 +133,16 @@
   <data name="icon_forever_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_forever_64.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_new_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_new_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_new_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_new_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_new_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_new_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_new_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_new_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
