--- a/Forever/Properties/Resources.resx
+++ b/Forever/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="icon_forever_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_forever_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_forever_241" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_forever_24.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_forever_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_forever_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
