--- a/Forever/Properties/Resources.resx
+++ b/Forever/Properties/Resources.resx
@@ -118,6 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="icon_close_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_close_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_close_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_close_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_consulter_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_consulter_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_forever_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_forever_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -147,5 +156,11 @@
   </data>
   <data name="icon_new_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_new_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_poubelle_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_poubelle_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_quitter_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_quitter_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
