--- a/Forever/Properties/Resources.resx
+++ b/Forever/Properties/Resources.resx
@@ -163,4 +163,10 @@
   <data name="icon_quitter_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_quitter_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_save_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_save_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_save_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_save_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
