--- a/Forever/Properties/Resources.resx
+++ b/Forever/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="icon_cadenas_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_cadenas_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_cadenas_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_cadenas_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_close_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_close_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -145,6 +151,12 @@
   <data name="icon_forever_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_forever_64.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_information_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_information_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_information_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_information_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_new_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_new_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -160,6 +172,12 @@
   <data name="icon_poubelle_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_poubelle_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_print_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_print_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_print_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_print_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_quitter_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_quitter_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -168,5 +186,8 @@
   </data>
   <data name="icon_save_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_save_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_valider_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_valider_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
